basic layout setup

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,6 @@ main, nav {
 p {
   @apply mt-2;
 }
-h1 {
+/* h1 {
   @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
-}
+} */
